第一次上传

--- a/springboot_demo_1/pom.xml
+++ b/springboot_demo_1/pom.xml
@@ -2,21 +2,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<!--1.paremt标签 父级工程
+			SpringBoot 将现有的主流康佳都进行了整合,在内部依据完成了jar包的依赖配置,
+			如果用户需要,则只添加某些核心包 那么所有的依赖都会按照规则自动下载
+	-->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
+	<!-- Maven工程细节-->
 	<groupId>com.jt</groupId>
 	<artifactId>springboot_demo_1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot_demo_1</name>
 	<description>Demo project for Spring Boot</description>
+	<!--JDK版本-->
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+
 	<dependencies>
+		<!--Springboot通过启动项的方式 进行jar包文件的加载
+			同时这些功能中的配置项 SpringBoot 有些也会自动的完成
+			无特殊的要求 无需手动的配置
+			开箱即用的思想！！！
+		-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -29,6 +43,12 @@
 		</dependency>
 	</dependencies>
 
+	<!--
+		关于build标签说明
+		1.build标签他是maven工程的要求
+		2.作用: 完成项目的打包发布等一系列的功能.
+		3.该标签的使用  是SpringBoot必须的,如果没有该标签则项目无法使用jar包运行
+	-->
 	<build>
 		<plugins>
 			<plugin>
