第一次上传

--- a/springboot_demo_1/pom.xml
+++ b/springboot_demo_1/pom.xml
@@ -41,6 +41,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!--引入插件lombok 自动的set/get/构造方法插件-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 
 	<!--
