--- a/springboot_demo_1/src/main/resources/application.yml
+++ b/springboot_demo_1/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 #默认环境选项
 spring:
   profiles:
-    active: prod
+    active: test
 
 #环境分割
 ---
@@ -12,7 +12,7 @@ spring:
 spring:
   config:
     activate:
-      on-profile: prod
+      on-profile: test
 server:
   port: 80    #配置端口
   servlet:      #web项目发布路径
