--- a/springboot_demo_2/src/main/resources/application.yml
+++ b/springboot_demo_2/src/main/resources/application.yml
@@ -5,12 +5,12 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/jt?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+    url: jdbc:mysql://localhost:3306/jt?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
     username: root
     password: root
 
 mybatis:
-  type-aliases-package: com.jt.demo.pojo
+  type-aliases-package: com.jt.pojo
   mapper-locations: classpath:/mybatis/mappers/*.xml
   #开启驼峰映射
   configuration:
