--- a/springboot_demo_2/src/main/resources/application.yml
+++ b/springboot_demo_2/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
     context-path: /
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/jt?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
     username: root
     password: root
