--- a/springboot_demo_2/src/main/resources/application.yml
+++ b/springboot_demo_2/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
 
 mybatis:
   type-aliases-package: com.jt.pojo
-  mapper-locations: classpath:/mybatis/mappers/*.xml
+  mapper-locations: classpath:/mappers/*.xml
   #开启驼峰映射
   configuration:
     map-underscore-to-camel-case: true
