--- a/springboot_demo_2/src/main/resources/application.yml
+++ b/springboot_demo_2/src/main/resources/application.yml
@@ -9,7 +9,9 @@ spring:
     username: root
     password: root
 
-mybatis:
+#SpringBoot整合MybatisPlus配置
+mybatis-plus:
+  #定义别名包
   type-aliases-package: com.jt.pojo
   mapper-locations: classpath:/mappers/*.xml
   #开启驼峰映射
