第一次上传

--- a/springboot_demo_2/src/main/resources/application.yml
+++ b/springboot_demo_2/src/main/resources/application.yml
@@ -18,5 +18,8 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
 
-  
-  
+
+#添加MP日志  打印执行的SQL
+logging:
+  level:
+    com.jt.mapper: debug
