--- a/springboot_demo_1/pom.xml
+++ b/springboot_demo_1/pom.xml
@@ -55,8 +55,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<!--个别IDEA工具 解析时 有警告 但是不影响程序的执行-->
 
