--- a/jt/src/main/resources/application.yml
+++ b/jt/src/main/resources/application.yml
@@ -21,3 +21,10 @@ mybatis-plus:
 logging:
   level:
     com.jt.mapper: debug
+
+#标识图片上传的路径
+file:
+  #本地存储的根目录
+  localDir: D:/JT-SOFT/image
+  #网络访问虚拟路径
+  urlPath: http://image.jt.com
